# src/main/java/com/brewery/app/finance/tracker/controller/ClientsController.java
@@ -1,7 +1,9 @@
 package com.brewery.app.finance.tracker.controller;
 
 import com.brewery.app.finance.tracker.codegen.api.ClientsApi;
+import com.brewery.app.finance.tracker.codegen.model.ClientAccountPatchRequest;
 import com.brewery.app.finance.tracker.codegen.model.ClientCreationPostRequest;
+import com.brewery.app.finance.tracker.codegen.model.ClientCreditAccount;
 import com.brewery.app.finance.tracker.codegen.model.ClientProfile;
 import com.brewery.app.finance.tracker.service.ClientProfileService;
 import lombok.AllArgsConstructor;
@@ -9,7 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
@@ -22,22 +23,23 @@ public class ClientsController implements ClientsApi {
 
     @Override
     public Mono<ResponseEntity<ClientProfile>> clientsClientIdProfileGet(String clientId, ServerWebExchange exchange) {
-        // return Mono.just(new ResponseEntity<>(new ClientProfile().firstName("ben"), HttpStatus.OK));
-        return clientProfileService.createNewClientProfile(Mono.just(new ClientCreationPostRequest().firstName("benxin")))
-                .map(clientProfile -> {
-                    log.info(clientProfile.getEmail());
-                    return new ResponseEntity<>(clientProfile, HttpStatus.CREATED);})
-                .defaultIfEmpty(new ResponseEntity<>(new ClientProfile().firstName("ben"), HttpStatus.CREATED))
-                ;
+        return clientProfileService.getClientProfileById(clientId)
+                .map(clientProfile -> new ResponseEntity<>(clientProfile, HttpStatus.OK));
     }
 
     @Override
     public Mono<ResponseEntity<ClientProfile>> clientsNewPost(Mono<ClientCreationPostRequest> clientCreationPostRequest, ServerWebExchange exchange) {
         log.info("\"Received request\\n\"");
         return clientProfileService.createNewClientProfile(clientCreationPostRequest)
-                .defaultIfEmpty(new ClientProfile().firstName("ben"))
                 .map(clientProfile -> new ResponseEntity<>(clientProfile, HttpStatus.CREATED));
 
+    }
+
+    @Override
+    public Mono<ResponseEntity<ClientProfile>> clientsClientIdProfilePatch(String clientId, Mono<ClientAccountPatchRequest> clientAccountPatchRequest, ServerWebExchange exchange) {
+        return clientAccountPatchRequest
+                .flatMap(patch -> clientProfileService.patchClientProfile(clientId, patch.getClientAccountList()))
+                .map(clientProfile -> new ResponseEntity<>(clientProfile, HttpStatus.CREATED));
     }
 
 }
