# src/main/java/com/brewery/app/finance/tracker/model/ClientCreditAccountModel.java
@@ -2,21 +2,19 @@ package com.brewery.app.finance.tracker.model;
 
 import lombok.Builder;
 import lombok.Data;
-import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.time.LocalDate;
 import java.util.List;
 
 @Data
 @Builder
-public class ClientCreditAccount {
+public class ClientCreditAccountModel {
 
     private String accountId;
     private String accountName;
     private String imageUrl;
     private Enums.ClientAccountType accountType;
-    private List<Balance> balanceList;
+    private List<BalanceModel> balanceModelList;
     private LocalDate expiryDate;
     private int maxBalanceRecord;
 }
